# drone_control

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  main.cpp  vcpkg-configuration.json  vcpkg.json
include/: body.hpp  draw.hpp  drone.hpp  force_arrows.hpp
include/controller/: pid.hpp
src/: body.cpp  draw.cpp  drone.cpp  force_arrows.cpp
src/controller/: pid.cpp
